--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,13 +1,15 @@
 body {
   background-color: #fff;
   color: #333;
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  // font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: 'Muli', sans-serif;
   font-size: 13px;
   line-height: 18px;
 }
 
 p, ol, ul, td {
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: 'Muli', sans-serif;
+  // font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 13px;
   line-height: 22px;
 }
