--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,9 +3,10 @@ html
   head
     meta[name="viewport" content="width=device-width, initial-scale=1.0"]
     title
-      = content_for?(:title) ? yield(:title) : 'Beep Beep Boop'
-    meta name="description" content="#{content_for?(:description) ? yield(:description) : 'Beep Beep Boop'}"
+      = content_for?(:title) ? yield(:title) : 'dmtf.in'
+    meta name="description" content="#{content_for?(:description) ? yield(:description) : 'dmtf.in'}"
     == stylesheet_link_tag "application", :media => 'all', 'data-turbolinks-track' => true
+    = stylesheet_link_tag '//fonts.googleapis.com/css?family=Muli|Pacifico'
     == javascript_include_tag 'application', 'data-turbolinks-track' => true
     == csrf_meta_tags
   body
