--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -7,7 +7,7 @@ nav.navbar.navbar-default.navbar-fixed-top
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      = link_to raw('<h1>dmtf.in</h3>'), root_path, class: 'navbar-brand'
+      = link_to raw('<h1>dmtf.in</h3>'), root_path, class: 'navbar-brand', data: { no_turbolink: true }
     .collapse.navbar-collapse
       ul.nav.navbar-nav.pull-right
         == render 'layouts/navigation_links'
