--- a/app/views/layouts/_navigation_links.html.slim
+++ b/app/views/layouts/_navigation_links.html.slim
@@ -1,13 +1,18 @@
 - if user_signed_in?
-  li
-    = link_to raw('<i class="fa fa-plus-circle"></i>'), new_phone_call_path
-  li
-    = link_to raw('<i class="fa fa-sign-out"></i>'), signout_path
+  /li
+    / = link_to raw('<i class="fa fa-plus-circle"></i>'), new_phone_call_path
+  / li
+    / # = link_to raw('<i class="fa fa-sign-out"></i>'), signout_path, data: { no_turbolink: true }
+  / li
+    / = link_to image_tag(current_user.image, class: 'img-circle profile-image'), user_path
   li.dropdown
     a.dropdown-toggle href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"= image_tag(current_user.image, class: 'img-circle profile-image')
     ul.dropdown-menu.pull-right
       li
-        = link_to 'Edit Profile', user_path
+        = link_to raw('<i class="fa fa-cog"></i>&nbsp;&nbsp; Settings'), user_path
+      li.divider role="separator"
+      li
+        = link_to raw('<i class="fa fa-sign-out"></i>&nbsp;&nbsp; Log out'), signout_path, data: { no_turbolink: true }
 - else
   li
-    = link_to raw('<i class="fa fa-sign-in"></i>'), signin_path
+    = link_to raw('<i class="fa fa-sign-in"></i>&nbsp;&nbsp; Log in'), signin_path
