--- a/app/views/layouts/_navigation_links.html.slim
+++ b/app/views/layouts/_navigation_links.html.slim
@@ -15,4 +15,4 @@
         = link_to raw('<i class="fa fa-sign-out"></i>&nbsp;&nbsp; Log out'), signout_path, data: { no_turbolink: true }
 - else
   li
-    = link_to raw('<i class="fa fa-sign-in"></i>&nbsp;&nbsp; Log in'), signin_path
+    = link_to raw('<i class="fa fa-sign-in"></i>&nbsp;&nbsp; Log in with Google'), signin_path
