--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -8,7 +8,8 @@ nav.navbar.navbar-default.navbar-fixed-top
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      = link_to raw('<h1>dmtf.in</h3>'), root_path, class: 'navbar-brand', data: { no_turbolink: turbolink_status }
+      = link_to raw('<h1>dmtf.in</h3>'), root_path, class: 'navbar-brand'
+      / , data: { no_turbolink: turbolink_status }
     .collapse.navbar-collapse
       
       ul.nav.navbar-nav.pull-right
