--- a/app/views/visitors/index.html.slim
+++ b/app/views/visitors/index.html.slim
@@ -6,7 +6,7 @@
   / section
   /   h2
   /     = link_to raw('<i class="fa fa-sign-in"></i>') + ' Sign in with Google', signin_path
-  .screen-pane style="background: white;"
+  .screen-pane style="background: white; margin: 0 -15px 0 -15px;"
     .jumbotron
       .container
         h1 Hello
