--- a/app/views/phone_calls/index.html.slim
+++ b/app/views/phone_calls/index.html.slim
@@ -1,9 +1,9 @@
-.container-fluid.screen-pane
+.container-fluid
   .col-md-8
     textarea#parsetext placeholder="Please call in to the meeting at 800-555-1234 x1234567 at 11:00am"
   .col-md-4
     == render 'recent_calls'
-.container-fluid.screen-pane
+.container-fluid
   == render 'form'
       
 
