--- a/app/views/visitors/_video.html.slim
+++ b/app/views/visitors/_video.html.slim
@@ -2,6 +2,7 @@
   .brand-holder
     h1.brand dmtf.in
     //= link_to 'dmtf.in', root_url
+    / div= image_tag('logo.png')
     h3= @tagline
 
   <!--[if gt IE 9 | (!IE)]><!-->
