--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,6 +9,12 @@ html
     = stylesheet_link_tag '//fonts.googleapis.com/css?family=Muli|Pacifico'
     == javascript_include_tag 'application', 'data-turbolinks-track' => true
     == csrf_meta_tags
+    - if user_signed_in?
+      link rel='icon' type='image/png' href="#{asset_url('logo-on.png')}"
+      link rel='icon' type='image/ico' href="#{asset_url('favicon-on.ico')}"
+    - else
+      link rel='icon' type='image/png' href="#{asset_url('logo.png')}"
+      link rel='icon' type='image/ico' href="#{asset_url('favicon.ico')}"
   body class="#{body_class}"
     = render 'visitors/video' if homepage? or request.path == '/responses'
     == render 'layouts/messages'
