--- a/app/views/users/profile.html.slim
+++ b/app/views/users/profile.html.slim
@@ -9,27 +9,24 @@ h1= current_user.name
   h3= link_to('Beep Beep Boop dial me right in!', new_phone_call_path)
 
 
-table.table
-  tr
-    th User Profile
-    th Membership level
-  tr
-    td
-      = simple_form_for(@user) do |f|
+.row
+  .col-xs-6
+    h3 User Profile
+    = simple_form_for(@user, url: user_path) do |f|
+      
+      .form-inputs
+        = f.input :email
         
-        .form-inputs
-          = f.input :email
-          
-        .form-inputs
-          = f.input :phone
+      .form-inputs
+        = f.input :phone
 
-        .form-actions
-        br
-          = f.button :submit, value: 'Update Profile', class: 'btn btn-primary'
-
-    td
-      span= "Current membership level: #{current_user.membership_level.name}"
-
+      .form-actions
       br
-      br
-      input type="button" href="#" value="Upgrade Membership" class="btn btn-secondary" disabled="true"
+        = f.button :submit, value: 'Update Profile', class: 'btn btn-primary'
+
+  .col-xs-6
+    span= "Current membership level: #{current_user.membership_level.name}"
+
+    br
+    br
+    input type="button" href="#" value="Upgrade Membership" class="btn btn-secondary" disabled="true"
