--- a/app/views/phone_calls/index.html.slim
+++ b/app/views/phone_calls/index.html.slim
@@ -1,7 +1,7 @@
 .container-fluid
-  .col-md-8
+  .col-xs-9
     textarea#parsetext placeholder="Please call in to the meeting at 800-555-1234 x1234567 at 11:00am"
-  .col-md-4
+  .col-xs-3
     == render 'recent_calls'
 .container-fluid
   == render 'form'
