--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -140,6 +140,7 @@ body {
     font-family: 'Pacifico', cursive;
     // font-weight: bold;
     // text-transform: uppercase;
+
   }  
 }
 .brand-holder {
@@ -154,6 +155,7 @@ body {
     font-family: 'Pacifico', cursive;
     text-align: center;
     font-size: 8.0em;
+    font-weight: normal;
     color: #FFFFFF !important;
     a {
       color: #FFFFFF !important;
@@ -168,11 +170,15 @@ body {
 }
 
 
-// h1, h2, h3, h4 {
-//   font-family: ‘Arial Black’, Gadget, sans-serif;
-//   font-weight: bold;
-//   text-transform: uppercase;
-// }
+main {
+  h1, h2, h3, h4 {
+    font-family: 'Arimo', sans-serif;
+    font-weight: bold;
+    // font-size: 3.0em;
+    // text-transform: uppercase;
+  }  
+}
+
 
 
 @mixin user-form-input {
@@ -188,7 +194,7 @@ body {
 body.visitors {
   .navbar.navbar-default {
     // background: transparent;
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(255, 255, 255, 0.5);
     -webkit-transition: background-color 1000ms linear;
     -moz-transition: background-color 1000ms linear;
     -o-transition: background-color 1000ms linear;
@@ -272,7 +278,8 @@ a.navbar-brand {
 .navbar-nav {
   font-size: 1.8em;
   // font-family: ‘Arial Black’, Gadget, sans-serif;
-  font-family: 'Muli', sans-serif;
+  // font-family: 'Muli', sans-serif;
+  font-family: 'Arimo', sans-serif;
   // text-transform: uppercase;
   // font-weight: bold;
   padding-top: 0.2em;
@@ -321,9 +328,15 @@ a.navbar-brand {
     color: #FFFFFF;
   }
 }
-
+body.visitors {
+  background: image-url('operators.jpg') no-repeat center center;
+  background-size: cover;
+  background-attachment: fixed;
+  position: relative;
+}
 body {
-  font-family: 'Muli', sans-serif;
+  // font-family: 'Muli', sans-serif;
+  font-family: 'Arimo', sans-serif;
   // background: image-url('booths.jpg') no-repeat center center;
   background-size: cover;
   background-attachment: fixed;
